--- a/Sass/about.scss
+++ b/Sass/about.scss
@@ -3,13 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-body::-webkit-scrollbar {
-  width: 10px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: red;
-}
 body {
   scroll-behavior: smooth;
   h1 {
@@ -64,7 +57,7 @@ main {
     .banner__side {
       position: relative;
       display: flex;
-      background-color: #b11116;
+      background-color: var(--primaryColor);
       flex: 0 0 auto;
       width: 6%;
       .nav {
@@ -109,8 +102,8 @@ main {
     }
   }
   .introduce-section {
-    background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18865.png") no-repeat center;
-    background-size: cover;
+    background: var(--background_1);
+    color: var(--colorText_1);
     overflow: hidden;
     padding: 50px 0 110px;
     .introduce-container {
@@ -136,7 +129,7 @@ main {
           align-items: end;
           .box__content {
             height: auto;
-            border: 1px solid #092f46;
+            border: 3px solid var(--primaryColor);
             border-radius: 10px;
             max-width: 528px;
             height: fit-content;
@@ -146,9 +139,9 @@ main {
           .counter {
             position: absolute;
             top: -45px;
-            background: white;
+            background: var(--background_1);
             font-size: 80px;
-            color: #ed1c24;
+            color: var(--primaryColor);
             padding: 0 15px 0 10px;
             left: 35px;
           }
@@ -173,7 +166,7 @@ main {
             z-index: -1;
             right: -50px;
             bottom: -59px;
-            background: #ffdd00;
+            background: var(--background_2);
             transform: rotate(-180deg);
           }
         }
@@ -181,7 +174,7 @@ main {
           .box__img:before {
             position: absolute;
             content: "";
-            background: #b11116;
+            background: var(--background_3);
             border-radius: 60px;
             width: 118px;
             height: 117px;
@@ -195,7 +188,7 @@ main {
             position: absolute;
             content: "";
             border-radius: 90px 90px 0 0;
-            background: #ffdd00;
+            background: var(--background_2);
             z-index: 2;
             bottom: -55px;
             left: -46px;
@@ -210,7 +203,7 @@ main {
             height: 117px;
             right: -60px;
             top: -60px;
-            background: #ed1c24;
+            background: var(--background_3);
             z-index: 1;
           }
         }
@@ -222,7 +215,7 @@ main {
     display: flex;
     justify-content: space-between;
     .box__img {
-      background-image: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Frame-18637-1.png");
+      background: var(--background_2);
       width: 50%;
       height: auto;
       position: relative;
@@ -269,9 +262,9 @@ main {
     .box__content {
       width: 50%;
       height: auto;
-      background-image: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-1-1.png");
+      background: var(--background_3);
       padding: 85px 88px 95px 75px;
-      color: #fff;
+      color: var(--colorText_3);
       h1 {
         margin-bottom: 30px;
       }
@@ -281,6 +274,8 @@ main {
     }
   }
   .reason-section {
+    background-color: var(--background_1);
+    color: var(--colorText_1);
     padding: 50px 0 110px;
     overflow: hidden;
     .reason-container {
@@ -327,7 +322,7 @@ main {
           }
           .content {
             width: 100%;
-            min-height: 250px;
+            min-height: 300px;
             position: relative;
             padding: 50px 24px 24px;
             bottom: 0;
@@ -347,13 +342,17 @@ main {
             z-index: 0;
             color: #fff;
             h3 {
+              color: var(--colorText_2);
               margin-bottom: 20px;
+            }
+            p {
+              color: var(--colorText_2);
             }
           }
           .content::before {
             content: "";
             position: absolute;
-            background: #b11116;
+            background: var(--background_2);
             width: 97.5%;
             height: 97.5%;
             z-index: -1;
@@ -373,7 +372,7 @@ main {
         border-radius: 30px;
         gap: 10px;
         padding: 5px 5px 5px 30px;
-        background: red;
+        background: var(--primaryColor);
         color: #fff;
         cursor: pointer;
         text-transform: uppercase;
@@ -386,14 +385,16 @@ main {
           padding: 10px;
           size: 10px;
           background-color: #fff;
-          color: red;
+          color: var(--primaryColor);
           border-radius: 50%;
         }
       }
     }
   }
   .result-section {
-    padding: 0 0 110px;
+    background: var(--background_1);
+    color: var(--colorText_1);
+    padding: 50px 0 110px;
     .result-container {
       .result__content {
         width: 100%;
@@ -423,7 +424,7 @@ main {
             h3 {
               position: absolute;
               font-size: 50px;
-              color: red;
+              color: var(--colorText_1);
             }
           }
           .box__content {
@@ -442,21 +443,25 @@ main {
     }
   }
   .team-section {
-    padding: 0 0 110px;
+    background-color: var(--background_2);
+    padding: 50px 0 110px;
     .team-container {
       .team__content {
         text-align: center;
         margin-bottom: 30px;
         h1 {
+          color: var(--colorText_2);
           margin-bottom: 20px;
         }
         p {
+          color: var(--colorText_2);
           font-size: 20px;
         }
       }
     }
   }
   .contact__section {
+    background-color: var(--background_2);
     padding: 0 0 110px;
     display: flex;
     justify-content: center;
@@ -475,7 +480,7 @@ main {
       text-align: center;
       align-items: center;
       flex-direction: column;
-      background-image: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18855-3.png");
+      background: var(--background_1);
       padding: 55px 64px 60px;
       .box__logo {
         max-width: 277px;
@@ -486,7 +491,7 @@ main {
         display: flex;
         flex-direction: column;
         gap: 20px;
-        color: #fff;
+        color: var(--colorText_1);
         .team__pic--desc {
           display: flex;
           align-items: start;
@@ -504,7 +509,7 @@ main {
         font-size: 14px;
         gap: 10px;
         padding: 5px 5px 5px 30px;
-        background: red;
+        background: var(--primaryColor);
         color: #fff;
         cursor: pointer;
         text-transform: uppercase;
@@ -517,16 +522,18 @@ main {
           padding: 10px;
           size: 10px;
           background-color: #fff;
-          color: red;
+          color: var(--primaryColor);
           border-radius: 50%;
         }
       }
     }
   }
   .question-section {
-    padding: 0 0 110px;
+    background: var(--background_1);
+    padding: 50px 0 110px;
     .question-container {
       h1 {
+        color: var(--colorText_1);
         text-align: center;
         margin-bottom: 30px;
       }
@@ -544,7 +551,7 @@ main {
           margin: 10px 0;
 
           * {
-            color: #ed1b24;
+            color: var(--colorText_1);
             font-weight: 700;
             font-size: 20px;
           }
@@ -561,7 +568,7 @@ main {
             gap: 10px;
 
             p {
-              color: #000;
+              color: var(--colorText_3);
               font-size: 15px;
               font-weight: 400;
               display: none;
