--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -1,26 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-:root {
-  --mainRed: rgb(253, 0, 0);
-  --animiation: 0.5s ease;
-}
-body::-webkit-scrollbar {
-  width: 10px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: red;
-}
 body {
-  font-family: gilroyMedium;
-  letter-spacing: 0.01em;
-  scroll-behavior: smooth;
   a {
     text-decoration: none;
-  }
-  p {
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 400;
   }
   img {
     object-fit: contain;
@@ -32,11 +12,15 @@ body {
     line-height: 1.3;
     font-weight: 1000;
     font-family: headerfont;
-    color: black;
-    // text-transform: uppercase;
-    // background: var(--gradient-color);
-    // -webkit-background-clip: text;
-    // -webkit-text-fill-color: transparent;
+    /* text-transform: uppercase;
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+  }
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
   }
 }
 * {
@@ -83,7 +67,7 @@ main {
             height: 15px;
             border: 3px solid #fff;
             border-radius: 50%;
-            background-color: var(--mainRed);
+            background-color: var(--primaryColor);
             cursor: pointer;
           }
         }
@@ -98,7 +82,7 @@ main {
     .banner__side {
       position: relative;
       display: flex;
-      background-color: #b11116;
+      background-color: var(--primaryColor);
       flex: 0 0 auto;
       width: 6%;
       .nav {
@@ -144,8 +128,9 @@ main {
   }
   .presentation-section {
     padding: 80px 0 110px;
-    background: url("/assets/img/patten-02.png") no-repeat;
+    background: var(--background_1);
     background-size: cover;
+    color: var(--colorText_1) !important;
     .wrap__dess {
       margin-bottom: 110px;
       width: 100%;
@@ -154,6 +139,8 @@ main {
       justify-content: space-between;
       align-items: start;
       .box__img {
+        border-radius: 20px;
+        overflow: hidden;
         width: calc(100% / 2);
         height: 100%;
       }
@@ -176,11 +163,10 @@ main {
             font-size: 20px;
             margin-bottom: 20px;
             strong {
-              font-weight: 700;
+              font-weight: 1000;
             }
             span {
-              font-weight: 700;
-              color: var(--mainRed);
+              font-weight: 200;
             }
           }
           .content-subDescription {
@@ -197,7 +183,7 @@ main {
           border-radius: 30px;
           gap: 10px;
           padding: 5px 5px 5px 30px;
-          background: red;
+          background: var(--primaryColor);
           color: #fff;
           cursor: pointer;
           text-transform: uppercase;
@@ -210,22 +196,23 @@ main {
             padding: 10px;
             size: 10px;
             background-color: #fff;
-            color: red;
+            color: var(--primaryColor);
             border-radius: 50%;
           }
         }
       }
     }
     .warp__first {
+      color: black;
       width: 100%;
       height: auto;
-      background-color: #fff;
+      background-color: transparent;
       display: flex;
       align-items: end;
       justify-content: space-between;
       flex-wrap: wrap;
       height: fit-content;
-      border-bottom: 2px solid var(--mainRed);
+      border-bottom: 5px solid var(--primaryColor);
       overflow: hidden;
       border-top-right-radius: 24px;
       border-top-left-radius: 24px;
@@ -263,7 +250,7 @@ main {
             height: 50px;
           }
           .counter {
-            color: red;
+            color: var(--primaryColor);
             font-size: 1.5em;
             font-weight: 700;
           }
@@ -271,7 +258,7 @@ main {
       }
       .item:hover {
         transition: var(--animiation);
-        background-color: var(--mainRed);
+        background-color: var(--primaryColor);
       }
       .item:hover .box__count .counter,
       .item:hover .box__count h3 {
@@ -284,7 +271,7 @@ main {
     .warp__last {
       width: 100%;
       height: auto;
-      background-color: #fff;
+      background-color: transparent;
       margin-top: 100px;
       display: flex;
       justify-content: space-between;
@@ -342,7 +329,7 @@ main {
           padding: 75px 60px 65px 65px;
           /* max-width: 445px; */
           position: relative;
-          border: 2px solid #231f20;
+          border: 2px solid var(--colorText_1);
           border-radius: 15px;
         }
         .content:before {
@@ -357,7 +344,8 @@ main {
     }
   }
   .studyProcess-section {
-    background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18863.png") no-repeat;
+    background: var(--background_2);
+    color: var(--colorText_2);
     background-size: cover;
     padding: 50px 0 110px;
     .studyProcess-container {
@@ -373,7 +361,7 @@ main {
         justify-content: space-between;
         gap: 30px;
         .item {
-          width: calc((100% / 3) - 30px);
+          width: calc((100% / 4) - 30px);
           display: flex;
           align-items: center;
           justify-content: center;
@@ -384,7 +372,11 @@ main {
             flex-direction: column;
             gap: 20px;
             h3 {
-              color: var(--mainRed);
+              font-size: 16px;
+              color: var(--colorText_2);
+            }
+            p {
+              font-size: 14px;
             }
           }
         }
@@ -392,8 +384,7 @@ main {
     }
   }
   .thinkAbout__section {
-    background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-2.png") no-repeat;
-    background-size: cover;
+    background: var(--background_3);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -409,7 +400,7 @@ main {
       justify-content: center;
       flex-direction: column;
       text-align: center;
-      color: #fff;
+      color: var(--colorText_3);
       h1 {
         width: 80%;
         font-size: 3em;
@@ -417,7 +408,6 @@ main {
       }
     }
     .thinkAbout__category {
-      background-color: blue;
       width: 100%;
       height: fit-content;
       display: flex;
@@ -433,8 +423,10 @@ main {
 
       .slick-current {
         color: black !important;
-        background-color: rgba(255, 255, 255, 0.95) !important;
-        transition: var(--animiation);
+        background-color: var(--background_1) !important;
+      }
+      .slick-current > .box__img {
+        background-color: var(--background_1) !important;
       }
       .slick-track {
         margin: 0 auto;
@@ -445,10 +437,11 @@ main {
         align-items: center;
         justify-content: space-between;
         .category__item {
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
           position: relative;
           height: 400px;
           color: #fff;
-          background-color: rgba(168, 17, 21, 0.9);
+          background-color: var(--background_2);
           margin: 0 80px;
           padding: 110px 60px 0;
           display: flex;
@@ -461,10 +454,11 @@ main {
             top: 0;
             transform: translateY(-50%);
             padding: 3px;
-            background-color: #fff;
+            background-color: var(--background_2);
             border-radius: 50%;
           }
           .box__content {
+            color: var(--colorText_3);
             height: fit-content;
             display: flex;
             align-items: center;
@@ -484,8 +478,8 @@ main {
       top: 350px;
       border: none;
       outline: none;
-      color: red;
-      background: var(--gradient-color);
+      color: var(--colorText_3);
+      background: var(--primaryColor);
       width: 50px;
       height: 50px;
       border-radius: 50%;
@@ -502,6 +496,7 @@ main {
   }
   .newAndEvent-section {
     padding: 80px 0 110px;
+    background-color: var(--background_1);
     .newAnhEvent-container {
       text-align: center;
       display: flex;
@@ -509,11 +504,12 @@ main {
       align-items: center;
       .newAndEvent__content {
         h1 {
-          color: #b11116;
+          color: var(--colorText_1);
           margin-bottom: 50px;
         }
       }
       .grid__container {
+        width: 100%;
         display: flex;
         align-items: start;
         justify-content: space-between;
@@ -523,13 +519,14 @@ main {
         }
         .box__grid {
           position: relative;
-          width: calc(100% / 4);
+          width: calc(100% / 2);
           height: fit-content;
           border-top-left-radius: 14px;
           border-top-right-radius: 14px;
           overflow: hidden;
           background: transparent;
           a {
+            color: var(--colorText_1);
             display: flex;
             flex-direction: column;
             gap: 20px;
@@ -548,7 +545,7 @@ main {
             .box__date {
               position: absolute;
               padding: 10px 13px 20px;
-              background-color: #ed1c24;
+              background-color: var(--primaryColor);
               top: 0;
               color: #fff;
               .date {
@@ -567,10 +564,10 @@ main {
             overflow: hidden;
             display: flex;
             align-items: start;
-            justify-content: center;
+            justify-content: end;
             border-radius: 14px;
             img {
-              width: 590px;
+              max-width: 579px;
               height: 360px;
               object-fit: cover;
             }
@@ -590,7 +587,7 @@ main {
         border-radius: 30px;
         gap: 10px;
         padding: 5px 5px 5px 30px;
-        background: red;
+        background: var(--primaryColor);
         color: #fff;
         cursor: pointer;
         text-transform: uppercase;
@@ -603,7 +600,7 @@ main {
           padding: 10px;
           size: 10px;
           background-color: #fff;
-          color: red;
+          color: var(--primaryColor);
           border-radius: 50%;
         }
       }
@@ -611,7 +608,9 @@ main {
   }
 
   .system-section {
-    padding: 0 0 110px;
+    background: var(--background_1);
+    padding: 50px 0 110px;
+    color: var(--colorText_1);
     .system-container {
       display: flex;
       justify-content: space-between;
@@ -635,7 +634,7 @@ main {
           border-radius: 30px;
           gap: 10px;
           padding: 5px 5px 5px 30px;
-          background: red;
+          background: var(--primaryColor);
           color: #fff;
           cursor: pointer;
           text-transform: uppercase;
@@ -648,7 +647,7 @@ main {
             padding: 10px;
             size: 10px;
             background-color: #fff;
-            color: red;
+            color: var(--primaryColor);
             border-radius: 50%;
           }
         }
@@ -719,7 +718,12 @@ main {
     }
     .studyProcess-section {
       .studyProcess-container {
-        max-width: 824px;
+        .wrap__dess {
+          flex-wrap: wrap;
+          .item {
+            width: calc((100% / 2) - 30px);
+          }
+        }
       }
     }
     .newAndEvent-section {
@@ -860,14 +864,12 @@ main {
           justify-content: center;
           flex-wrap: wrap;
           gap: 10px;
-          .box__grid.box__grid-main {
-            width: 100%;
-          }
           .box__grid {
-            width: calc((100% / 2) - 10px);
+            width: 100%;
             .box__img {
               height: 200px;
               img {
+                max-width: none;
                 width: 100%;
                 height: 200px;
               }
