--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
-  --mainRed: rgb(253, 0, 0);
+  --primaryColor: rgb(253, 0, 0);
   --animiation: 0.5s ease;
 }
 
@@ -61,7 +61,7 @@ main .contactBanner-section .box__img img {
 main .contactBanner-section .banner__side {
   position: relative;
   display: flex;
-  background-color: #b11116;
+  background-color: var(--primaryColor);
   flex: 0 0 auto;
   width: 6%;
 }
@@ -105,6 +105,7 @@ main .contactBanner-section .banner__side .nav .icon li {
   transform: rotate(90deg);
 }
 main .centralOffice-section {
+  background-color: var(--background_1);
   padding: 155px 0 90px;
 }
 main .centralOffice-section .centralOffice-container {
@@ -115,8 +116,10 @@ main .centralOffice-section .centralOffice-container {
   max-width: 1200px;
   height: auto;
   text-align: center;
+  color: var(--colorText_1);
 }
 main .centralOffice-section .centralOffice-container .box__content h1 {
+  color: var(--colorText_1);
   font-size: 40px;
   margin-bottom: 95px;
 }
@@ -149,6 +152,7 @@ main .centralOffice-section .centralOffice-container .wrap__dess .item .content 
   margin-bottom: 1.5em;
 }
 main .contact-section {
+  background-color: var(--background_1);
   padding: 0 0 288px;
 }
 main .contact-section .contact-container {
@@ -161,19 +165,23 @@ main .contact-section .contact-container {
   text-align: center;
 }
 main .contact-section .contact-container .box__content h1 {
+  color: var(--colorText_1);
   font-size: 40px;
   margin-bottom: 35px;
 }
 main .contact-section .contact-container .wrap__dess {
+  width: 100%;
+  height: auto;
   box-shadow: 0px 0px 40px rgba(103, 94, 94, 0.2);
   border-radius: 10px;
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: space-between;
 }
 main .contact-section .contact-container .wrap__dess .box__input {
   padding: 68px 58px 50px;
   width: 50%;
+  height: auto;
   display: flex;
   align-items: start;
   justify-content: start;
@@ -187,6 +195,7 @@ main .contact-section .contact-container .wrap__dess .box__input .box__enter {
   flex-wrap: wrap;
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__enter .item {
+  color: var(--colorText_1);
   width: 50%;
   display: flex;
   align-items: start;
@@ -200,19 +209,21 @@ main .contact-section .contact-container .wrap__dess .box__input .box__enter .it
   margin-bottom: 10px;
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__enter .item input {
+  background-color: var(--background_1);
   width: 100%;
-  border: 1px solid #d0d0d0;
+  border: 1px solid var(--primaryColor);
   height: 45px;
-  background: #ffffff;
   padding: 0 30px;
   border-radius: 100px;
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__enter .item textarea {
   width: 460px !important;
   height: 92px !important;
-  border: 1px solid #d0d0d0;
+  border: 1px solid var(--primaryColor) !important;
   border-radius: 10px;
   padding: 10px 15px;
+  outline: none;
+  background-color: var(--background_1);
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__btn {
   margin-top: 35px;
@@ -222,7 +233,7 @@ main .contact-section .contact-container .wrap__dess .box__input .box__btn {
   border-radius: 30px;
   gap: 10px;
   padding: 5px 5px 5px 30px;
-  background: red;
+  background: var(--primaryColor);
   color: #fff;
   cursor: pointer;
 }
@@ -235,15 +246,23 @@ main .contact-section .contact-container .wrap__dess .box__input .box__btn .butt
   padding: 10px;
   size: 10px;
   background-color: #fff;
-  color: var(--mainRed);
+  color: var(--primaryColor);
   border-radius: 50%;
 }
 main .contact-section .contact-container .wrap__dess .box__img {
+  align-self: stretch;
+  height: auto;
   width: 50%;
+}
+main .contact-section .contact-container .wrap__dess .box__img img {
+  max-width: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 main .location-section {
   position: relative;
-  background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-2.png") no-repeat;
+  background: url("/assets/img/patten-02.png") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   height: 500px;
@@ -264,13 +283,14 @@ main .location-section .location-container {
 }
 main .location-section .location-container .wrap__dess {
   box-shadow: 10px 0px 25px rgba(3, 3, 3, 0.2);
-  background-color: #fff;
+  background-color: var(--background_1);
   width: 100%;
   display: flex;
   align-items: start;
   justify-content: space-between;
   overflow: hidden;
   border-radius: 10px;
+  color: var(--colorText_1);
 }
 main .location-section .location-container .wrap__dess .wrap__map {
   width: 50%;
@@ -312,8 +332,11 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .i
   margin-bottom: 1.5em;
   font-weight: 400;
 }
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content p a {
+  color: var(--colorText_3);
+}
 main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content p a:hover {
-  color: red;
+  color: var(--colorText_1);
   transition: var(--animiation);
 }
 main .location-section .location-container .wrap__dess .wrap__desc .box__ress .box__btn {
@@ -325,7 +348,7 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
   border-radius: 30px;
   gap: 10px;
   padding: 5px 5px 5px 30px;
-  background: red;
+  background: var(--primaryColor);
   color: #fff;
   cursor: pointer;
 }
@@ -338,7 +361,7 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
   padding: 10px;
   size: 10px;
   background-color: #fff;
-  color: var(--mainRed);
+  color: var(--primaryColor);
   border-radius: 50%;
 }
 
@@ -358,13 +381,6 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
   }
   main .contact-section .contact-container .wrap__dess .box__input .box__enter .item textarea {
     width: 335px !important;
-  }
-  main .contact-section .contact-container .wrap__dess .box__img {
-    height: 100%;
-  }
-  main .contact-section .contact-container .wrap__dess .box__img img {
-    object-fit: cover;
-    height: 100%;
   }
   main .location-section .location-container {
     max-width: 960px;
@@ -398,13 +414,6 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
   }
   main .contact-section .contact-container .wrap__dess .box__input .box__enter .item textarea {
     max-width: 100% !important;
-  }
-  main .contact-section .contact-container .wrap__dess .box__img {
-    height: 100%;
-  }
-  main .contact-section .contact-container .wrap__dess .box__img img {
-    object-fit: cover;
-    height: 100%;
   }
   main .location-section .location-container .wrap__dess .wrap__desc .box__content h1 {
     font-size: 25px;
