--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,29 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-:root {
-  --mainRed: rgb(253, 0, 0);
-  --animiation: 0.5s ease;
-}
-
-body::-webkit-scrollbar {
-  width: 10px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: red;
-}
-
-body {
-  font-family: gilroyMedium;
-  letter-spacing: 0.01em;
-  scroll-behavior: smooth;
-}
 body a {
   text-decoration: none;
-}
-body p {
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
 }
 body img {
   object-fit: contain;
@@ -35,7 +11,15 @@ body h1 {
   line-height: 1.3;
   font-weight: 1000;
   font-family: headerfont;
-  color: black;
+  /* text-transform: uppercase;
+  background: var(--gradient-color);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+}
+body p {
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
 * {
@@ -84,7 +68,7 @@ main .sliderShow-section .sliderShow-carousel .slick-dots li .dot {
   height: 15px;
   border: 3px solid #fff;
   border-radius: 50%;
-  background-color: var(--mainRed);
+  background-color: var(--primaryColor);
   cursor: pointer;
 }
 main .sliderShow-section .sliderShow-carousel .slick-dots li.slick-active .dot {
@@ -94,7 +78,7 @@ main .sliderShow-section .sliderShow-carousel .slick-dots li.slick-active .dot {
 main .sliderShow-section .banner__side {
   position: relative;
   display: flex;
-  background-color: #b11116;
+  background-color: var(--primaryColor);
   flex: 0 0 auto;
   width: 6%;
 }
@@ -139,8 +123,9 @@ main .sliderShow-section .banner__side .nav .icon li {
 }
 main .presentation-section {
   padding: 80px 0 110px;
-  background: url("/assets/img/patten-02.png") no-repeat;
+  background: var(--background_1);
   background-size: cover;
+  color: var(--colorText_1) !important;
 }
 main .presentation-section .wrap__dess {
   margin-bottom: 110px;
@@ -151,6 +136,8 @@ main .presentation-section .wrap__dess {
   align-items: start;
 }
 main .presentation-section .wrap__dess .box__img {
+  border-radius: 20px;
+  overflow: hidden;
   width: 50%;
   height: 100%;
 }
@@ -176,11 +163,10 @@ main .presentation-section .wrap__dess .box__content .content .content-mainDescr
   margin-bottom: 20px;
 }
 main .presentation-section .wrap__dess .box__content .content .content-mainDescription strong {
-  font-weight: 700;
+  font-weight: 1000;
 }
 main .presentation-section .wrap__dess .box__content .content .content-mainDescription span {
-  font-weight: 700;
-  color: var(--mainRed);
+  font-weight: 200;
 }
 main .presentation-section .wrap__dess .box__content .content .content-subDescription {
   font-weight: 300;
@@ -195,7 +181,7 @@ main .presentation-section .wrap__dess .box__content .box__btn {
   border-radius: 30px;
   gap: 10px;
   padding: 5px 5px 5px 30px;
-  background: red;
+  background: var(--primaryColor);
   color: #fff;
   cursor: pointer;
   text-transform: uppercase;
@@ -209,19 +195,20 @@ main .presentation-section .wrap__dess .box__content .box__btn .button__icon {
   padding: 10px;
   size: 10px;
   background-color: #fff;
-  color: red;
+  color: var(--primaryColor);
   border-radius: 50%;
 }
 main .presentation-section .warp__first {
+  color: black;
   width: 100%;
   height: auto;
-  background-color: #fff;
+  background-color: transparent;
   display: flex;
   align-items: end;
   justify-content: space-between;
   flex-wrap: wrap;
   height: fit-content;
-  border-bottom: 2px solid var(--mainRed);
+  border-bottom: 5px solid var(--primaryColor);
   overflow: hidden;
   border-top-right-radius: 24px;
   border-top-left-radius: 24px;
@@ -261,13 +248,13 @@ main .presentation-section .warp__first .item .box__count .counter {
   height: 50px;
 }
 main .presentation-section .warp__first .item .box__count .counter {
-  color: red;
+  color: var(--primaryColor);
   font-size: 1.5em;
   font-weight: 700;
 }
 main .presentation-section .warp__first .item:hover {
   transition: var(--animiation);
-  background-color: var(--mainRed);
+  background-color: var(--primaryColor);
 }
 main .presentation-section .warp__first .item:hover .box__count .counter,
 main .presentation-section .warp__first .item:hover .box__count h3 {
@@ -279,7 +266,7 @@ main .presentation-section .warp__first .item:hover img {
 main .presentation-section .warp__last {
   width: 100%;
   height: auto;
-  background-color: #fff;
+  background-color: transparent;
   margin-top: 100px;
   display: flex;
   justify-content: space-between;
@@ -337,7 +324,7 @@ main .presentation-section .warp__last .box__content .content {
   padding: 75px 60px 65px 65px;
   /* max-width: 445px; */
   position: relative;
-  border: 2px solid #231f20;
+  border: 2px solid var(--colorText_1);
   border-radius: 15px;
 }
 main .presentation-section .warp__last .box__content .content:before {
@@ -349,7 +336,8 @@ main .presentation-section .warp__last .box__content .content:before {
   left: -10px;
 }
 main .studyProcess-section {
-  background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18863.png") no-repeat;
+  background: var(--background_2);
+  color: var(--colorText_2);
   background-size: cover;
   padding: 50px 0 110px;
 }
@@ -368,7 +356,7 @@ main .studyProcess-section .studyProcess-container .wrap__dess {
   gap: 30px;
 }
 main .studyProcess-section .studyProcess-container .wrap__dess .item {
-  width: calc(33.3333333333% - 30px);
+  width: calc(25% - 30px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -381,11 +369,14 @@ main .studyProcess-section .studyProcess-container .wrap__dess .item .box__conte
   gap: 20px;
 }
 main .studyProcess-section .studyProcess-container .wrap__dess .item .box__content h3 {
-  color: var(--mainRed);
+  font-size: 16px;
+  color: var(--colorText_2);
+}
+main .studyProcess-section .studyProcess-container .wrap__dess .item .box__content p {
+  font-size: 14px;
 }
 main .thinkAbout__section {
-  background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-2.png") no-repeat;
-  background-size: cover;
+  background: var(--background_3);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -401,7 +392,7 @@ main .thinkAbout__section .thinkAbout__content {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  color: #fff;
+  color: var(--colorText_3);
 }
 main .thinkAbout__section .thinkAbout__content h1 {
   width: 80%;
@@ -409,7 +400,6 @@ main .thinkAbout__section .thinkAbout__content h1 {
   font-weight: 1000;
 }
 main .thinkAbout__section .thinkAbout__category {
-  background-color: blue;
   width: 100%;
   height: fit-content;
   display: flex;
@@ -424,8 +414,10 @@ main .thinkAbout__section .thinkAbout__category .slick-list {
 }
 main .thinkAbout__section .thinkAbout__category .slick-current {
   color: black !important;
-  background-color: rgba(255, 255, 255, 0.95) !important;
-  transition: var(--animiation);
+  background-color: var(--background_1) !important;
+}
+main .thinkAbout__section .thinkAbout__category .slick-current > .box__img {
+  background-color: var(--background_1) !important;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track {
   margin: 0 auto;
@@ -437,10 +429,11 @@ main .thinkAbout__section .thinkAbout__category .slick-track {
   justify-content: space-between;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track .category__item {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   position: relative;
   height: 400px;
   color: #fff;
-  background-color: rgba(168, 17, 21, 0.9);
+  background-color: var(--background_2);
   margin: 0 80px;
   padding: 110px 60px 0;
   display: flex;
@@ -454,10 +447,11 @@ main .thinkAbout__section .thinkAbout__category .slick-track .category__item .bo
   top: 0;
   transform: translateY(-50%);
   padding: 3px;
-  background-color: #fff;
+  background-color: var(--background_2);
   border-radius: 50%;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track .category__item .box__content {
+  color: var(--colorText_3);
   height: fit-content;
   display: flex;
   align-items: center;
@@ -474,8 +468,8 @@ main .thinkAbout__section .slick-next {
   top: 350px;
   border: none;
   outline: none;
-  color: red;
-  background: var(--gradient-color);
+  color: var(--colorText_3);
+  background: var(--primaryColor);
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -491,6 +485,7 @@ main .thinkAbout__section .slick-next {
 }
 main .newAndEvent-section {
   padding: 80px 0 110px;
+  background-color: var(--background_1);
 }
 main .newAndEvent-section .newAnhEvent-container {
   text-align: center;
@@ -499,10 +494,11 @@ main .newAndEvent-section .newAnhEvent-container {
   align-items: center;
 }
 main .newAndEvent-section .newAnhEvent-container .newAndEvent__content h1 {
-  color: #b11116;
+  color: var(--colorText_1);
   margin-bottom: 50px;
 }
 main .newAndEvent-section .newAnhEvent-container .grid__container {
+  width: 100%;
   display: flex;
   align-items: start;
   justify-content: space-between;
@@ -513,7 +509,7 @@ main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid-mai
 }
 main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid {
   position: relative;
-  width: 25%;
+  width: 50%;
   height: fit-content;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
@@ -521,6 +517,7 @@ main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid {
   background: transparent;
 }
 main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid a {
+  color: var(--colorText_1);
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -540,7 +537,7 @@ main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .bo
 main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .box__content .box__date {
   position: absolute;
   padding: 10px 13px 20px;
-  background-color: #ed1c24;
+  background-color: var(--primaryColor);
   top: 0;
   color: #fff;
 }
@@ -558,11 +555,11 @@ main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .bo
   overflow: hidden;
   display: flex;
   align-items: start;
-  justify-content: center;
+  justify-content: end;
   border-radius: 14px;
 }
 main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .box__img img {
-  width: 590px;
+  max-width: 579px;
   height: 360px;
   object-fit: cover;
 }
@@ -579,7 +576,7 @@ main .newAndEvent-section .newAnhEvent-container .box__btn {
   border-radius: 30px;
   gap: 10px;
   padding: 5px 5px 5px 30px;
-  background: red;
+  background: var(--primaryColor);
   color: #fff;
   cursor: pointer;
   text-transform: uppercase;
@@ -593,11 +590,13 @@ main .newAndEvent-section .newAnhEvent-container .box__btn .button__icon {
   padding: 10px;
   size: 10px;
   background-color: #fff;
-  color: red;
+  color: var(--primaryColor);
   border-radius: 50%;
 }
 main .system-section {
-  padding: 0 0 110px;
+  background: var(--background_1);
+  padding: 50px 0 110px;
+  color: var(--colorText_1);
 }
 main .system-section .system-container {
   display: flex;
@@ -624,7 +623,7 @@ main .system-section .system-container .box__content-left .box__btn {
   border-radius: 30px;
   gap: 10px;
   padding: 5px 5px 5px 30px;
-  background: red;
+  background: var(--primaryColor);
   color: #fff;
   cursor: pointer;
   text-transform: uppercase;
@@ -638,7 +637,7 @@ main .system-section .system-container .box__content-left .box__btn .button__ico
   padding: 10px;
   size: 10px;
   background-color: #fff;
-  color: red;
+  color: var(--primaryColor);
   border-radius: 50%;
 }
 main .system-section .system-container .box__img {
@@ -696,8 +695,11 @@ main .system-section .system-container .box__content-right .box__items .item .co
   main .presentation-section .presentation-container .warp__first .item {
     width: 33.3333333333%;
   }
-  main .studyProcess-section .studyProcess-container {
-    max-width: 824px;
+  main .studyProcess-section .studyProcess-container .wrap__dess {
+    flex-wrap: wrap;
+  }
+  main .studyProcess-section .studyProcess-container .wrap__dess .item {
+    width: calc(50% - 30px);
   }
   main .newAndEvent-section .newAnhEvent-container {
     max-width: 824px;
@@ -814,16 +816,14 @@ main .system-section .system-container .box__content-right .box__items .item .co
     flex-wrap: wrap;
     gap: 10px;
   }
-  main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid.box__grid-main {
-    width: 100%;
-  }
   main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid {
-    width: calc(50% - 10px);
+    width: 100%;
   }
   main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .box__img {
     height: 200px;
   }
   main .newAndEvent-section .newAnhEvent-container .grid__container .box__grid .box__img img {
+    max-width: none;
     width: 100%;
     height: 200px;
   }
